Add stop code for fuckers, add scroller

--- a/src/less/fuckers/spinner.less
+++ b/src/less/fuckers/spinner.less
@@ -1,4 +1,5 @@
 .blaaargh {
+    display: inline-block; 
     animation-name: spinner;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
